--- a/streetswap/package.json
+++ b/streetswap/package.json
@@ -16,7 +16,8 @@
     "ethers": "^5",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
     "eslint": "8.11.0",
